--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>DrumKit</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>DrumKit</title>
+    <!-- link to style sheet -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- link to google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -19,39 +29,19 @@
     <!-- navbar starts here -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Contact Us</a></li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                    </li>  
             </div>
         </div>
     </nav>
@@ -62,47 +52,47 @@
 
         <div data-key="65" class="key">
             <kbd>A</kbd>
-            <span class="sound">CLAP</span>
+            <div class="sound">CLAP</div>
         </div>
 
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span class="sound">HITHAT</span>
+            <div class="sound">HITHAT</div>
         </div>
 
         <div data-key="68" class="key">
             <kbd>D</kbd>
-            <span class="sound">KICK</span>
+            <div class="sound">KICK</div>
         </div>
 
         <div data-key="70" class="key">
             <kbd>F</kbd>
-            <span class="sound">OPENHAT</span>
+            <div class="sound">OPENHAT</div>
         </div>
 
         <div data-key="71" class="key">
             <kbd>G</kbd>
-            <span class="sound">BOOM</span>
+            <div class="sound">BOOM</div>
         </div>
 
         <div data-key="72" class="key">
             <kbd>H</kbd>
-            <span class="sound">RIDE</span>
+            <div class="sound">RIDE</div>
         </div>
 
         <div data-key="74" class="key">
             <kbd>J</kbd>
-            <span class="sound">SNARE</span>
+            <div class="sound">SNARE</div>
         </div>
 
         <div data-key="75" class="key">
             <kbd>K</kbd>
-            <span class="sound">TOM</span>
+            <div class="sound">TOM</div>
         </div>
 
         <div data-key="76" class="key">
             <kbd>L</kbd>
-            <span class="sound">TINK</span>
+            <div class="sound">TINK</div>
         </div>
 
     </div>
