--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <link rel="shortcut icon" href="files/image.jpg">
     <!-- link to style sheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="files/style.css">
 
     <!-- link to google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="#" id="contacts">Contact Us</a>
                     </li>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Contact Us</a></li>
@@ -123,7 +123,23 @@
     <audio src="sounds/tom.wav" data-key="75"></audio>
     <audio src="sounds/tink.wav" data-key="76"></audio>
 
-    <script type="text/javascript" src="style.js"></script>
+    <div id="contact">
+        <div class="card side1" style="width: 18rem;">
+            <img class="card-img-top" src="https://avatars1.githubusercontent.com/u/58389098?s=460&u=f3f311649ce839abd0ea3fd57674a818030b5549&v=4" alt="Card image cap" style="width: 70px; height: 100px;">
+            <div class="card-body">
+              <a href="#">Aarushi</a>
+            </div>
+          </div>
+          <div class="card side2" style="width: 18rem;">
+            <img class="card-img-top" src="https://avatars0.githubusercontent.com/u/54600270?s=460&u=74cd5f2d92474f7b8b79365464ad4a2ddd148fd9&v=4" alt="Card image cap" style="width: 70px; height: 100px;">
+            <div class="card-body">
+              <a href="#">Jyotika</a>
+            </div>
+          </div>
+    </div>
+    <div id="btn"><button id="hide">HIDE</button></div>
+
+    <script type="text/javascript" src="files/style.js"></script>
 
 </body>
 
