--- a/index.html
+++ b/index.html
@@ -124,18 +124,22 @@
     <audio src="sounds/tink.wav" data-key="76"></audio>
 
     <div id="contact">
+        <div class="cols col-lg-6">
         <div class="card side1" style="width: 18rem;">
             <img class="card-img-top" src="https://avatars1.githubusercontent.com/u/58389098?s=460&u=f3f311649ce839abd0ea3fd57674a818030b5549&v=4" alt="Card image cap" style="width: 70px; height: 100px;">
             <div class="card-body">
               <a href="#">Aarushi</a>
             </div>
+        </div>
           </div>
+          <div class="cols col-lg-6">
           <div class="card side2" style="width: 18rem;">
             <img class="card-img-top" src="https://avatars0.githubusercontent.com/u/54600270?s=460&u=74cd5f2d92474f7b8b79365464ad4a2ddd148fd9&v=4" alt="Card image cap" style="width: 70px; height: 100px;">
             <div class="card-body">
               <a href="#">Jyotika</a>
             </div>
           </div>
+        </div>
     </div>
     <div id="btn"><button id="hide">HIDE</button></div>
 
