--- a/index.html
+++ b/index.html
@@ -24,26 +24,7 @@
 
 <body>
 
-    <!-- navbar starts here -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" id="contacts">Contact Us</a>
-                    </li>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Contact Us</a></li>
-                    </ul>
-                    </li>
-            </div>
-        </div>
-    </nav>
-    <!-- navbar ends here -->
+
 
     <h1>DrumKit</h1>
 
@@ -123,25 +104,16 @@
     <audio src="sounds/tom.wav" data-key="75"></audio>
     <audio src="sounds/tink.wav" data-key="76"></audio>
 
-    <div id="contact">
-        <div class="cols col-lg-6">
-        <div class="card side1" style="width: 18rem;">
-            <img class="card-img-top" src="https://avatars1.githubusercontent.com/u/58389098?s=460&u=f3f311649ce839abd0ea3fd57674a818030b5549&v=4" alt="Card image cap" style="width: 70px; height: 100px;">
-            <div class="card-body">
-              <a href="#">Aarushi</a>
-            </div>
-        </div>
-          </div>
-          <div class="cols col-lg-6">
-          <div class="card side2" style="width: 18rem;">
-            <img class="card-img-top" src="https://avatars0.githubusercontent.com/u/54600270?s=460&u=74cd5f2d92474f7b8b79365464ad4a2ddd148fd9&v=4" alt="Card image cap" style="width: 70px; height: 100px;">
-            <div class="card-body">
-              <a href="#">Jyotika</a>
-            </div>
-          </div>
-        </div>
-    </div>
-    <div id="btn"><button id="hide">HIDE</button></div>
+    <!-- contributors section -->
+
+    <footer id="footer">
+
+
+        <p class="we">Made with ❤ by
+            <span class="txt-rotate" data-period="1000" data-rotate='[  "Jyotika.", "Aarushi." ]'></span>
+        </p>
+
+    </footer>
 
     <script type="text/javascript" src="files/style.js"></script>
 
