--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="shortcut icon" href="files/image.jpg">
+    <link rel="shortcut icon" href="image.jpg">
     <!-- link to style sheet -->
-    <link rel="stylesheet" href="files/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- link to google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,7 +27,6 @@
 
 
     <h1>DrumKit</h1>
-
 
     <!-- keys code starts -->
 
@@ -115,7 +114,7 @@
 
     </footer>
 
-    <script type="text/javascript" src="files/style.js"></script>
+    <script type="text/javascript" src="style.js"></script>
 
 </body>
 
